Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/SFDC_Expense_Line_Item__c.object
<CustomObject>
    <description>Each line item can be recorded.</description>
    <fields>
        <fullName>Accounts_Payable_Comments__c</fullName>
        <label>Accounts Payable Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Airline_Ticket_Number__c</fullName>
        <label>Airline Ticket Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_AP_Amount__c</fullName>
        <description>AP Profiles Only – Users read-only</description>
        <label>AP Adjusted Audit Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approver_Comments__c</fullName>
        <label>Approver Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Include information such as attendees, etc</description>
        <label>Line Item Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exp_Line_Item__c</fullName>
        <label>Expense Line Item #</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expenditure_Type__c</fullName>
        <label>Expenditure Type</label>
        <picklist>
            <picklistValues>
                <fullName>Airfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas-Rental Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mileage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking/Tolls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone/Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxi</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expense_Header__c</fullName>
        <label>Expense Report</label>
        <referenceTo>SFDC_Expense_Header__c</referenceTo>
        <relationshipName>R00No0000000pc7UEAQ</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>If_Airline_Vendor__c</fullName>
        <label>Airline Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Air Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Airways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Airways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virgin Atlantic</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Car_Rental_Vendor__c</fullName>
        <label>Car Rental Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Alamo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europcar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hertz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrifty</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_Item_Counter__c</fullName>
        <formula>+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Counter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mileage_Rate__c</fullName>
        <formula>IF(  ISPICKVAL( Expenditure_Type__c, &quot;Mileage&quot;), 0.405, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mileage Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miles_Amount__c</fullName>
        <formula>Miles__c *  Mileage_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mileage Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miles__c</fullName>
        <label>Miles Driven</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_Code__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Employee Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Paid Credit Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <label>Rejected Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Out of Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Receipt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Expense Line Item</label>
    <nameField>
        <displayFormat>EXP-LN-ITM {0000}</displayFormat>
        <label>Line Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>